fix failing service tests before Sonar